--- a/Primo Assignment/README.adoc
+++ b/Primo Assignment/README.adoc
@@ -21,22 +21,20 @@ x * 1 = 1 * x ⇒ x
 
 ==== Funzioni coinvolte
 
-[[nested]]
-
-*link:LocalOpts.cpp#L24[addBy0]
+* link:LocalOpts.cpp#L24[addBy0]
 
 [source,c++]
 ----
-bool addBy0(BasicBlock::iterator Iter) 
+bool addBy0 (BasicBlock::iterator Iter) 
 ----
 
 Verifica che l'istruzione sia un'addizione e che uno degli operandi sia una costante, più precisamente che sia uno 0, dopodichè sostituisce le references all'addizione con l'operando stesso.
 
-*link:LocalOpts.cpp#L105[mulBy1]
+* link:LocalOpts.cpp#L105[mulBy1]
 
 [source,c++]
 ----
-bool mulBy1(BinaryOperator *binIter, Value *Other)
+bool mulBy1 (BinaryOperator *binIter, Value *Other)
 ----
 
 Verifica che l'istruzione di moltiplicazione abbia una costante tra gli operandi, più precisamente che sia un 1, dopodichè sostituisce le references alla moltiplicazione con l'operando stesso.
@@ -50,7 +48,7 @@ y = x / 8 ⇒ y = x >> 3
 
 ==== Funzioni coinvolte
 
-link:LocalOpts.cpp#L62[mulByPowOf2]
+* link:LocalOpts.cpp#L62[mulByPowOf2]
 
 [source,c++]
 ----
@@ -59,7 +57,7 @@ bool mulByPowOf2 (BinaryOperator *binIter, ConstantInt *ci, Value *Other)
 
 Dopo aver controllato che l'istruzione sia una moltiplicazione e che uno degli operandi sia, allo stesso tempo, una costante ed una potenza di due, crea un'istruzione di shift a sinistra. Quest'ultima avrà come operandi il registro presente nella moltiplicazione ed il logaritmo in base due della costante. Dopodichè vengono aggiornate le references alla moltiplicazione con lo shift.
 
-link:LocalOpts.cpp#L72[mulToShift]
+* link:LocalOpts.cpp#L72[mulToShift]
 
 [source,c++]
 ----
@@ -68,7 +66,7 @@ bool mulToShift (BinaryOperator *binIter, ConstantInt *ci, Value *Other)
 
 Ha la stessa funzionalità di mulByPowOf2 ma lavora con costanti che non siano potenze di due. Crea due istruzioni: uno shift a sinistra e, un'addizione o una sottrazione. Questa decisione dipende dalla differenza tra il valore contenuto nel registro ed il valore del logaritmo in base due più vicino alla costante. Le references alla moltiplicazione vengono passate all'ultima istruzione creata.
 
-link:LocalOpts.cpp#L139[divByPowOf2]
+* link:LocalOpts.cpp#L139[divByPowOf2]
 
 [source,c++]
 ----
@@ -77,32 +75,30 @@ bool divByPowOf2 (BinaryOperator *binIter, ConstantInt *ci, Value *Other)
 
 Meccanismo identico a mulByPowOf2 ma applicato alla divisione unsigned. In questo caso l'istruzione creata è uno shift a destra.
 
-link:LocalOpts.cpp#L149[divBy1]
+* link:LocalOpts.cpp#L149[divBy1]
 
 [source,c++]
 ----
-bool divBy1(BinaryOperator *binIter, Value *Other)
+bool divBy1 (BinaryOperator *binIter, Value *Other)
 ----
 
 Come mulBy1, ma per la divisione unsigned.
 
-link:LocalOpts.cpp#L156[zeroDiv]
+* link:LocalOpts.cpp#L156[zeroDiv]
 
 [source,c++]
 ----
-bool zeroDiv(BinaryOperator *binIter, ConstantInt *ci)
+bool zeroDiv (BinaryOperator *binIter, ConstantInt *ci)
 ----
 
 In caso di divisione unsigned che abbia 0 come numeratore sostituisce le sue references con la costante 0.
 
-link:LocalOpts.cpp#L112[mulOptimization]
+* link:LocalOpts.cpp#L112[mulOptimization] e link:LocalOpts.cpp#L164[divOptimization]
 
 [source,c++]
 ----
-bool mulOptimization(BasicBlock::iterator Iter)
+bool mulOptimization (BasicBlock::iterator Iter)
 ----
-
-link:LocalOpts.cpp#L164[divOptimization]
 
 [source,c++]
 ----
@@ -119,11 +115,11 @@ a = b + 1, c = a - 1, c = b
 
 ==== Funzioni coinvolte
 
-link:LocalOpts.cpp#L195[multiInstructionOptimization]
+* link:LocalOpts.cpp#L195[multiInstructionOptimization]
 
 [source,c++]
 ----
-bool multiInstructionOptimization(BasicBlock::iterator Iter, BasicBlock &B)
+bool multiInstructionOptimization (BasicBlock::iterator Iter, BasicBlock &B)
 ----
 
 Nel caso in cui ci sia un'istruzione che svolge un'operazione e, successivamente, un'istruzione che svolge il calcolo inverso, la funzione modifica le references alla seconda sostituendole con l'operando della prima operazione. Questo permette di rimuovere istruzioni non necessarie.  
